--- a/modules/Townships-Plugin/pom.xml
+++ b/modules/Townships-Plugin/pom.xml
@@ -24,23 +24,22 @@
         <!--</dependency>-->
         <dependency>
             <groupId>org.spigotmc.</groupId>
-            <artifactId>spigot-API</artifactId>
-            <version>1.8.6-R0.1-SNAPSHOT</version>
+            <artifactId>spigot-api</artifactId>
+            <version>1.8.8-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>fr.neatmonster.nocheatplus</groupId>
-            <artifactId>NoCheatPlus</artifactId>
-            <version>3.12.0-BETA2</version>
-            <scope>system</scope>
+            <groupId>fr.neatmonster</groupId>
+            <artifactId>nocheatplus</artifactId>
+            <version>3.13.0-SNAPSHOT</version>
+            <scope>provided</scope>
             <optional>true</optional>
-            <systemPath>D:/champions test server/plugins/NoCheatPlus.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.griefcraft</groupId>
             <artifactId>lwc</artifactId>
-            <version>4.4.0-SNAPSHOT</version>
+            <version>4.5.0-SNAPSHOT</version>
             <scope>provided</scope>
             <optional>true</optional>
             <exclusions>
@@ -64,16 +63,16 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>3.3</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.2.1</version>
+                <version>2.4</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -86,7 +85,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.7</version>
+                <version>2.10.3</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
