--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
     <!-- Update Townships Version Number Here! -->
     <properties>
         <townships.version>0.0.1-SNAPSHOT</townships.version>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <modelVersion>4.0.0</modelVersion>
@@ -19,7 +19,26 @@
         <module>modules/Townships-Plugin</module>
         <module>modules/Townships-Effects</module>
     </modules>
-
+	
+    <repositories>
+        <repository>
+            <id>spigot-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+        </repository>
+		<repository>
+            <id>vault-repo</id>
+            <url>http://nexus.theyeticave.net/content/repositories/pub_releases</url>
+        </repository>
+        <repository> 
+            <id>md_5-snapshots</id> 
+            <url>http://repo.md-5.net/content/repositories/snapshots/</url> 
+        </repository> 
+        <repository>
+            <id>mcstats.snapshots</id> 
+            <url>http://repo.mcstats.org/content/repositories/snapshots/</url> 
+        </repository> 		
+    </repositories>
+	
     <dependencies>
         <!--<dependency>-->
             <!--<groupId>org.bukkit</groupId>-->
@@ -31,24 +50,23 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-API</artifactId>
-            <version>1.8.6-R0.1-SNAPSHOT</version>
+            <version>1.8.8-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>net.milkbowl.vault</groupId>
-            <artifactId>Vault</artifactId>
-            <version>1.4.1</version>
+            <artifactId>VaultAPI</artifactId>
+            <version>1.5</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>fr.neatmonster.nocheatplus</groupId>
-            <artifactId>NoCheatPlus</artifactId>
-            <version>3.12.0-BETA2</version>
-            <scope>system</scope>
+            <groupId>fr.neatmonster</groupId>
+            <artifactId>nocheatplus</artifactId>
+            <version>3.13.0-SNAPSHOT</version>
+            <scope>provided</scope>
             <optional>true</optional>
-            <systemPath>D:/champions test server/plugins/NoCheatPlus.jar</systemPath>
         </dependency>
     </dependencies>
 
