--- a/modules/Townships-Plugin/pom.xml
+++ b/modules/Townships-Plugin/pom.xml
@@ -23,7 +23,7 @@
             <!--<optional>true</optional>-->
         <!--</dependency>-->
         <dependency>
-            <groupId>org.spigotmc.</groupId>
+            <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
             <version>1.8.8-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
