--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
         <!--</dependency>-->
         <dependency>
             <groupId>org.spigotmc</groupId>
-            <artifactId>spigot-API</artifactId>
+            <artifactId>spigot-api</artifactId>
             <version>1.8.8-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
             <optional>true</optional>
