--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
         <townships.version>0.0.1-SNAPSHOT</townships.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <modelVersion>4.0.0</modelVersion>
